# alibabacloud-aiops-skills

./: README-CN.md  README.md
skills/aiml/agentloop/alibabacloud-agentloop-dataset/: SKILL.md
skills/aiml/agentloop/alibabacloud-agentloop-evaluation/: SKILL.md
skills/aiml/agentloop/alibabacloud-agentloop-experience/: SKILL.md
skills/aiml/agentloop/alibabacloud-agentloop-management/: SKILL.md
skills/aiml/aisearch/alibabacloud-cleversee-search/: SKILL.md
skills/aiml/docmind/alibabacloud-docmind-parse/: SKILL.md
skills/aiml/learn/alibabacloud-pai-dlc-job/: SKILL.md
skills/aiml/learn/alibabacloud-pai-dlc-job-diagnostics/: SKILL.md
skills/aiml/learn/alibabacloud-pai-eas-service-deploy/: SKILL.md
skills/aiml/learn/alibabacloud-pai-eas-service-diagnose/: SKILL.md
skills/aiml/learn/alibabacloud-pai-feature-store-featuredb-usage-query/: SKILL.md
skills/entcmc/emas/alibabacloud-httpdns/: SKILL.md
skills/migrationom/bpstudio/alibabacloud-cadt-deploy-on-aliyun/scripts/cli/: cadt-deploy-on-aliyun.sh  cadt_deploy_on_aliyun.py  pyproject.toml
skills/migrationom/bpstudio/alibabacloud-cadt-deploy-on-aliyun/scripts/cli/hooks/pre/: EcsRunCommand.py  EcsRunCommandSync.py  EcsSendFile.py  InstallApplication.py
skills/migrationom/bpstudio/alibabacloud-cadt-deploy-on-aliyun/scripts/cli/lib/: __init__.py  attrs.py  envelope.py  errors.py  hooks.py  identity.py  manifest.py  normalize.py  oss_upload.py  poller.py  runner.py  validator.py
skills/migrationom/bpstudio/alibabacloud-cadt-deploy-on-aliyun/scripts/cli/tests/: test_hooks.py  test_normalize.py  test_smoke.py
(+1976 files in other folders)
