[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadt-deploy-on-aliyun-cli"
version = "1.0.0"
description = "qoder Operation dispatcher — MCP-aligned CLI for cadt-deploy-plugin"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "cadt-deploy-plugin"}
]
dependencies = [
    "jsonschema==4.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cadt-deploy-on-aliyun = "cadt_deploy_on_aliyun:main"

[tool.setuptools]
py-modules = ["cadt_deploy_on_aliyun"]



[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
